# Clocky

./: Cargo.toml  README.md  ui.slint
.github/workflows/: release.yml
src/: main.rs
src-tauri/: tauri.conf.json
