[package]
name = "clocky"
version = "2.0.0"
edition = "2021"

[dependencies]
eframe     = "0.29"
egui       = "0.29"
chrono     = { version = "0.4", features = ["clock"] }
image      = "0.25"
rfd        = { version = "0.14", default-features = false, features = ["xdg-portal"] }
dirs       = "5.0"
base64     = "0.21"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
