[package]
name = "Clocky"
version = "1.2.0"
edition = "2021"

[dependencies]
eframe      = "0.29"
egui        = "0.29"
chrono      = { version = "0.4", features = ["clock"] }
image       = "0.25"
rfd         = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
