[package]
name = "Clocky"
version = "2.0.0"
edition = "2021"

[dependencies]
slint = "1.5"
chrono = { version = "0.4", features = ["clock"] }
image = "0.25"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
std = "1.0"

[build-dependencies]
slint-build = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
